<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Internet Browser Picker</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="text1">Look at my GUI</string>
    <string name="clickHere">CLICK HERE</string>
    <string name="check">Check this out!</string>
    <string name="check2">Is a Send message</string>
    <string name="switchText">Switch on/off</string>
    <string name="toastMessage">Here is more information</string>
    <string name="snack1">The switch is now </string>
    <string name="snackOn">on</string>
    <string name="snackOff">off</string>
    <string name="hint">Type here</string>
    <string name="emailLabel">Enter your email address:</string>
    <string name="emailPlaceholder">Type email here</string>
    <string name="passwordLabel">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="logButton">LOG File</string>
    <string name="profileHeader">Your profile</string>
    <string name="profileNameLabel">Your name:</string>
    <string name="profileNamePlaceholder">Enter your name</string>
    <string name="profileEmailLabel">Your email:</string>
    <string name="profileEmailPlaceholder">Enter your email</string>
    <string name="profilePictureLabel">Your picture:</string>
    <string name="profilePictureInstructions">Click the button above to take your picture</string>
    <string name="goChat">Go to chat</string>
    <string name="goLog">Go to log file</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="hideButton">Hide</string>
    <string name="alertDialogTitle">Delete Message</string>
    <string name="alertMessageOne">Do you want to delete this?</string>
    <string name="positiveButton">Yes, I want to</string>
    <string name="negativeButton">No, I don\'t want to</string>
    <string name="toastDeleteMessage">Message deleted</string>
    <string name="weather">Weather Forecast</string>
    <string name="curTemp">Temp right now</string>
    <string name="minTemp">Min Temp</string>
    <string name="maxTemp">Max Temp</string>
    <string name="uv">UV Ratings</string>
    <string name="isSend">Is a sent message</string>
    <string name="hide">Hide</string>
    <string name="message_here">Message Here</string>
    <string name="send">Send</string>
    <string name="message">Message…</string>
    <string name="receive">Receive</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chrome">Chrome</string>
    <string name="edge">MS Edge</string>
    <string name="firefox">Firefox</string>
    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" tools:keep="@string/nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" tools:keep="@string/nav_header_subtitle">Lab no 8</string>
    <string name="nav_header_desc" tools:keep="@string/nav_header_desc">Navigation header</string>
</resources>
