<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

    <TextView
        android:id="@+id/profileHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileHeader" />

    <TextView
        android:id="@+id/profileNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileNameLabel" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/profileNamePlaceholder"
        android:nextFocusDown="@id/profileEmail"
        android:nextFocusUp="@id/weatherButton"
        android:nextFocusRight="@id/profileEmail"
        android:nextFocusLeft="@id/weatherButton"/>

    <TextView
        android:id="@+id/profileEmailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileEmailLabel"
        android:nextFocusDown="@id/imageButton"
        android:nextFocusUp="@id/profileName"
        android:nextFocusRight="@id/imageButton"
        android:nextFocusLeft="@id/profileName"/>

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/profileEmailPlaceholder" />

    <TextView
        android:id="@+id/profilePictureLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilePictureLabel" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/picture_frame"
        android:nextFocusDown="@id/chatButton"
        android:nextFocusUp="@id/profileEmail"
        android:nextFocusRight="@id/chatButton"
        android:nextFocusLeft="@id/profileEmail"/>

    <TextView
        android:id="@+id/profilePictureInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilePictureInstructions" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chatButton"
        android:text="@string/goChat"
        android:nextFocusDown="@id/weatherButton"
        android:nextFocusUp="@id/imageButton"
        android:nextFocusRight="@id/weatherButton"
        android:nextFocusLeft="@id/imageButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weatherButton"
        android:text="@string/weather"
        android:background="@color/colorAccent"
        android:nextFocusDown="@id/profileName"
        android:nextFocusUp="@id/chatButton"
        android:nextFocusRight="@id/profileName"
        android:nextFocusLeft="@id/chatButton"/>

</LinearLayout>