<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="30sp"
        android:layout_columnSpan="2"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/clickHere"
        />
    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textSize="18sp"
        android:layout_row="1"
        android:layout_column="1"
        />
    <ImageButton
        android:id="@+id/flag"
        android:layout_width="205sp"
        android:layout_height="100sp"
        android:src="@drawable/flag"
        />
    <Switch
        android:id="@+id/switch1"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/switchText"
        />
    <EditText
        android:id="@+id/inputtext"
        android:hint="@string/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:inputType="textPersonName|textCapWords"/>

</GridLayout>