<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="30sp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickHere"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="fill"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <ImageButton
            android:id="@+id/flag"
            android:layout_width="205sp"
            android:layout_height="110sp"
            android:src="@drawable/flag"
            android:layout_weight="1"
            android:gravity="fill"
            />
        <Switch
            android:id="@+id/switch1"
            android:layout_width="205sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/switchText"
            android:layout_weight="1"
            android:gravity="fill"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/inputtext"
        android:hint="@string/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"/>
</LinearLayout>