<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="680sp"
        android:id="@+id/messages" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendButton"
        android:layout_alignParentBottom="true"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/sendButton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receiveButton"
        android:text="@string/receiveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/editText"/>


</RelativeLayout>